# server

./: .flake8  .gitignore  Pipfile  README.md  pyproject.toml
cupid/: __init__.py  __main__.py  config.py  discord.py  graph.py  testing.py  tokens.py
cupid/models/: __init__.py  app.py  database.py  enums.py  relationship.py  session.py  user.py
cupid/routes/: __init__.py  auth.py  relationships.py  testing.py  users.py  utils.py
docs/: docs.html  docs.yaml
docs/static/: rapidoc-min.js
